Fixed background color errors and body spacing errors

--- a/docs/static/css/style.css
+++ b/docs/static/css/style.css
@@ -11,6 +11,7 @@ header {
 
 body {
     font-family: Arial, sans-serif;
+    background-color: #f1f1f1;
     margin: 0px;
     padding: 0px;
 }
@@ -37,7 +38,8 @@ footer {
 .leftcolumn {   
   float: left;
   width: 75%;
-  padding-left: 20px;
+  padding-left: 40px;
+  padding-bottom: 20px;
   background-color: #f1f1f1;
 }
 
@@ -47,7 +49,8 @@ footer {
   width: 25%;
   background-color: #f1f1f1;
   padding-left: 20px;
-  padding-right: 20px;
+  padding-right: 40px;
+  padding-bottom: 20px;
 }
 
 /* Add a card effect for articles */
